--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,11 @@ input, select, textarea {
 	margin-bottom: 10px;
 }
 
-.project_description {
+#project_description_gitgud {
+	margin-top: 15px;
+}
+
+#project_description_airstage {
 	margin-top: 15px;
 }
 
